fix: Vercel build - Vite env types, Tooltip formatter, tsconfig types

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,10 @@
-# Schwab API (从 https://developer.schwab.com 获取)
-# SCHWAB_APP_KEY=your_app_key
-# SCHWAB_APP_SECRET=your_app_secret
-# SCHWAB_ACCESS_TOKEN=your_access_token
-# SCHWAB_REFRESH_TOKEN=your_refresh_token
-# 无配置时使用模拟数据
+# Schwab API（从 https://developer.schwab.com 获取，切勿提交真实值到 Git）
+# 复制本文件为 .env 并填入真实值；.env 已在 .gitignore 中
+SCHWAB_APP_KEY=your_app_key_here
+SCHWAB_APP_SECRET=your_app_secret_here
+SCHWAB_ACCESS_TOKEN=your_access_token_here
+SCHWAB_REFRESH_TOKEN=your_refresh_token_here
 
 PORT=3001
+
+# Multi-Agent 报告（可选）：OPENAI_API_KEY 或 GOOGLE_API_KEY
